--- a/css/index.html
+++ b/css/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>css动画</title>
+    <link rel="stylesheet" href="./style/index.css">
+
 </head>
 
 <body>
-
+    <div class="first"></div>
 
 </body>
 
